// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormErrorComponent Snapshots should match snapshot with email error 1`] = `
<div
  class="text-xs text-red-600"
>
  
  <div>
    Email invalid
  </div>
  
</div>
`;

exports[`FormErrorComponent Snapshots should match snapshot with multiple errors 1`] = `
<div
  class="text-xs text-red-600"
>
  <div>
    Email is required
  </div>
  
  <div>
    Email invalid
  </div>
  
</div>
`;

exports[`FormErrorComponent Snapshots should match snapshot with no errors 1`] = `
<div
  class="text-xs text-red-600"
>
  
  
</div>
`;

exports[`FormErrorComponent Snapshots should match snapshot with required error 1`] = `
<div
  class="text-xs text-red-600"
>
  <div>
    Username is required
  </div>
  
  
</div>
`;
